@@ -8,3 +8,4 @@ var
 etc
 config.log config.cache config.status Makefile sw.conf skunkweb.py swpython.py swmgr
 swcgi.py
+swcron
